# turboquant

./: CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  pyproject.toml
src/: lib.rs
src/core/: attention.rs  cache.rs  error.rs  mod.rs  packing.rs  quantizer.rs  rotation.rs
tests/python/: test_basic.py
turboquant/: __init__.py  fallback.py
turboquant/torch/: __init__.py  ops.py
