[project]
name = "turboquant"
version = "0.1.0"
description = "High-performance KV cache compression for LLMs"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.20",
]

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "."
module-name = "turboquant._turboquant"

[project.optional-dependencies]
torch = ["torch>=2.0"]
test = ["pytest", "hypothesis", "torch"]
dev = ["maturin", "ruff"]
